--- a/S01_Presentacion_Readme1st.ipynb
+++ b/S01_Presentacion_Readme1st.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "*** \n",
-    "|[![Outlook](https://img.shields.io/badge/Microsoft_Outlook-0078D4?style=plastic&logo=microsoft-outlook&logoColor=white)](mailto:calvar52@eafit.edu.co)||[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/S01_Presentacion_Readme1st.ipynb)\n",
+    "|[![Outlook](https://img.shields.io/badge/Microsoft_Outlook-0078D4?style=plastic&logo=microsoft-outlook&logoColor=white)](mailto:calvarezh@udemedellin.edu.co)||[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/S01_Presentacion_Readme1st.ipynb)\n",
     "|-:|:-|--:|\n",
     "|[![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=plastic&logo=linkedin&logoColor=white)](https://www.linkedin.com/in/carlosalvarez5/)|[![@alvarezhenao](https://img.shields.io/twitter/url/https/twitter.com/alvarezhenao.svg?style=social&label=Follow%20%40alvarezhenao)](https://twitter.com/alvarezhenao)|[![@carlosalvarezh](https://img.shields.io/badge/github-%23121011.svg?style=plastic&logo=github&logoColor=white)](https://github.com/carlosalvarezh)|\n",
     "\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50afde30",
+   "id": "a22fbf3d",
    "metadata": {},
    "source": [
     "## Microcurrículo"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b347b5d9",
+   "id": "6403f524",
    "metadata": {},
    "source": [
     "### Identificación del curso"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71142fb5",
+   "id": "05cb9f49",
    "metadata": {},
    "source": [
     "- ***Nivel de formación del programa:*** Pregrado\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "351f055c",
+   "id": "269bea2f",
    "metadata": {},
    "source": [
     "### COMPETENCIAS GENÉRICAS "
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47cba68a",
+   "id": "ea57f1f5",
    "metadata": {},
    "source": [
     "- ***Lectura crítica:*** RAE-1-Competencia Genérica: Analizo un texto relacionándolo con un contexto para asumir una postura crítica ante su tesis principal.\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "924152b2",
+   "id": "b7edd5cb",
    "metadata": {},
    "source": [
     "### COMPETENCIAS ESPECÍFICAS"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3192fa3",
+   "id": "c19b9dc4",
    "metadata": {},
    "source": [
     "- ***RAE-2-Competencia Específica: Problemas propios:*** Aplico conceptos físicos y matemáticos a través de las ecuaciones inherentes a la geometría analítica, la geometría vectorial y las condiciones de equilibrio estático de una partícula, a partir de los fundamentos básicos de la geometría, la trigonometría y el equilibrio de partículas. Empleo los fundamentos de la trigonometría para hacer mediciones simples de agrimensura y acotar elementos de aplicación a la ingeniería civil. Formulo ecuaciones de la recta y plano tanto en 2D como en 3D como herramienta para resolver problemas aplicados a la ingeniería. Resuelvo sistemas de ecuaciones lineales cuadráticas aplicados a la solución de problemas reales de la ingeniería cotidiana, atendiendo necesidades regionales y locales.\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4e753a4",
+   "id": "d0e5178f",
    "metadata": {},
    "source": [
     "### CONTENIDO PROGRAMÁTICO"
@@ -135,36 +135,52 @@
   },
   {
    "cell_type": "markdown",
-   "id": "556af624",
+   "id": "f00b7036",
    "metadata": {},
    "source": [
     "|**Semana** | **Fecha**         |**Contenido** |**Observación**|\n",
     "|:-----:|:-------------:|:-----------|:----------------------|\n",
-    "|01|06-08/02/2024|Descripción del curso y Pacto pedagógico| |\n",
-    "|02|13-15/02/2024|Solución de sistemas de ecuaciones por el método analítico||\n",
-    "|03|20-22/02/2024|Trigonometría||\n",
-    "|04|27-29/02/2024||1a evaluación (15%)|\n",
-    "|05|05-07/03/2024|Introducción a la geometría plana||\n",
-    "|06|12-14/03/2024|La línea recta|2a evaluación (20%)|\n",
-    "|07|19-21/03/2024|Geometría Vectorial||\n",
-    "|- |25-29/03/2024||Semana Santa|\n",
-    "|08|02-04/04/2024|||\n",
-    "|09|09-11/04/2024||3a evaluación (20%)|\n",
-    "|10|16-18/04/2024|La recta en el espacio 3D||\n",
-    "|11|23-25/04/2024|El plano en el espacio 3D||\n",
-    "|12|30/04-02/05/2024|Introducción a la Mecánica y Estática de partículas en 2D||\n",
-    "|13|07-09/05/2024|||\n",
-    "|14|14-16/05/2024|||\n",
-    "|15|21-23/05/2024|Estática de partículas en 3D||\n",
-    "|16|28-30/05/2024||4a evaluación (20%)|\n",
+    "|01|06/02|Presentación del curso. Aplicaciones a la Ingeniería Civil| |\n",
+    "|01|08/02|***Sistemas de ecuaciones I:*** lineales y cuadráticas| |\n",
+    "|02|13/02|***Sistemas de ecuaciones II:*** lineales y cuadráticas||\n",
+    "|02|15/02|***Trigonometría I:*** Funciones trigonométricas. Ley de seno y coseno. Identidades trigonométricas. Solución de triángulos||\n",
+    "|03|20/02|***Trigonometría II:*** Problemas de aplicación ||\n",
+    "|03|22/02|***Trigonometría III:*** Problemas de aplicación||\n",
+    "|04|27/02|***Introducción a la geometría Analítica Plana:*** Sistema coordenado.\tDistancia entre dos puntos (segmento de recta).\tRazón de división de un segmento.  Angulo de inclinación y pendiente de una recta.\tPosición relativa entre rectas. Ángulo entre dos rectas. Definición de vector para aplicaciones en el plano||\n",
+    "|04|29/02||***Quiz 1 (15%)*** Sistemas de ecuaciones y Trigonometría |\n",
+    "|05|05/03|***Introducción a la geometría plana:*** Ejercicios||\n",
+    "|05|07/03|***La línea la recta:*** Ecuación de la recta. Formas de la ecuación de la recta.\tDistancia punto – recta. Familia de rectas||\n",
+    "|06|12/03|***La línea recta:*** Problemas de aplicación||\n",
+    "|06|14/03|***La línea recta*** Problemas de aplicación - familia de rectas||\n",
+    "|07|19/03|***Introducción a la Geometría Vectorial 3D:*** El espacio cartesiano 3D y ubicación de puntos en el espacio: Distancia ente dos puntos 3D. Cosenos directores. Razón de división de un segmento. Definición vector. Componentes rectangulares de un vector en el espacio||\n",
+    "|07|21/03||***Quiz 2(20%)*** Introducción geometría 2D y Recta 2D|\n",
+    "|- |25-29/03||Semana Santa|\n",
+    "|08|02/04|***Introducción a la Geometría Vectorial 3D:*** Ejercicios||\n",
+    "|08|04/04|***Geometría Vectorial:*** Operaciones entre vectores. Normalización (Vector unitario). Producto por escalar. Producto escalar o producto interior. Producto vectorial. Triple producto escalar o triple producto mixto||\n",
+    "|09|09/04|***Geometría Vectorial:*** Suma de vectores por el método gráfico (triángulo y paralelogramo).\tEjercicios||\n",
+    "|09|11/04||***Quiz 3 (10%)*** Introducción a la Geometría Vectorial 3D|\n",
+    "|10|16/04|***Geometría Vectorial:*** Suma de vectores en el espacio 2D y 3D por descomposición. Ejercicios||\n",
+    "|10|18/04|***La recta en el espacio 3D*** Vector director. Forma paramétrica y simétrica.\tPosición relativa de rectas. Intersección de rectas. Angulo entre dos rectas||\n",
+    "|11|23/04|***La recta en el espacio 3D*** Ejercicios||\n",
+    "|11|25/04||***Quiz 4 (15%)*** Geometría Vectorial 3D: Operaciones entre vectores|\n",
+    "|12|30/04|***El plano en el espacio 3D:***\tEcuación general del plano.\tPosición relativa entre planos.\tAngulo entre dos planos. Distancia punto- plano. Trazas de un plano. Posición relativa recta – plano. Familia de planos. Punto de radiación. Ecuación general de la recta. Planos proyectantes de una recta||\n",
+    "|12|02/05|***El plano en el espacio 3D:*** Ejercicios||\n",
+    "|13|07/05|***El plano en el espacio 3D:*** Ejercicios familia||\n",
+    "|13|09/05|***Introducción a la Mecánica vectorial:*** Conceptos y principios fundamentales. Tipos de fuerzas. Unidades||\n",
+    "|||***Estática de partículas (2D):*** Cables. Ley de Hooke (aplicación resortes). Poleas ||\n",
+    "|14|14/05||***Quiz 5 (15%)*** Línea recta y plano en 3D|\n",
+    "|14|16/05|***Estática de partículas (2D)*** Taller ejercicios de aplicación||\n",
+    "|15|21/05|***Estática de partículas (2D)*** Aplicaciones con equilibrio en varios puntos. Máximos y mínimos||\n",
+    "|15|23/05|***Estática de partículas (3D)***||\n",
+    "|16|28/05|***Estática de partículas (3D)***||\n",
+    "|16|30/05|***Estática de partículas (3D)***||\n",
     "||||Semana de Receso académico para preparación de finales|\n",
-    "||||Semana de finales|\n",
-    "||||Cierre académico - Reporte del 100%|"
+    "|17|04-14/06||***Examen final (25%)***|\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb49df36",
+   "id": "0278b146",
    "metadata": {},
    "source": [
     "### EVALUACIÓN"
@@ -172,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c194fc",
+   "id": "684e1902",
    "metadata": {},
    "source": [
     "|Actividad evaluativa|Semana|Porcentaje (%)|Competencia a evaluar|Carácter (Individual/Grupal)|\n",
@@ -186,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3dec64a",
+   "id": "86a73438",
    "metadata": {},
    "source": [
     "### RECURSOS BIBLIOGRÁFICOS Y BASES DE DATOS"
@@ -194,17 +210,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7397d7fb",
+   "id": "233f4535",
    "metadata": {},
    "source": [
     "***General:***\n",
-    "- Precálculo: Matemáticas para el Cálculo. James Stewart, Lothar Redlin, Saleem Watson. Sexta Edición. Cengaje Leaning Editorial, 2012Matemáticas operativas. Luis H. Diez 14ª ed. 1998.\n",
+    "- ***Precálculo: Matemáticas para el Cálculo. James Stewart, Lothar Redlin, Saleem Watson. Sexta Edición. Cengaje Leaning Editorial, 2012Matemáticas operativas. Luis H. Diez 14ª ed. 1998.***\n",
     "- Álgebra, trigonometría y geometría analítica. ZILL & Dewar. Editorial McGraw-Hill. 3ª ed. 2012.\n",
-    "- Geometría Analítica. LEHMAN. Editorial LIMUSA.\n",
+    "- ***Geometría Analítica. LEHMAN. Editorial LIMUSA.***\n",
     "- Geometría Analítica e introducción al Cálculo Vectorial. PÉREZ & PANIAGUA. Fondo Editorial ITM. 21ª ed. 2016.\n",
     "- Geometría Plana y del Espacio y Trigonometría, BALDOR. Grupo Patria Cultural.\n",
     "- Geometría Analítica.  OTEYZA, ELENA; OSNAYA, EMMA; GÓMEZ, JOSÉ, RAMÍREZ , ARTURO:  \n",
-    "- Mecánica Vectorial para Ingenieros: Estática. BEER; JOHNSTON; MAZUREK; CORNWELL & SELF. Editorial McGraw-Hill. 12ª ed. 2019.\n",
+    "- ***Mecánica Vectorial para Ingenieros: Estática. BEER; JOHNSTON; MAZUREK; CORNWELL & SELF. Editorial McGraw-Hill. 12ª ed. 2019.***\n",
     "- Mecánica Vectorial para Ingenieros. Estática. HIBBELER. Editorial Prentice Hall – Pearson. 14ª ed. 2016.\n",
     "- Ingeniería Mecánica: Estática. Pytel & Kiusaalas. Cengage Learning. 3ª ed. 2010.\n",
     "\n",
@@ -222,12 +238,168 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "226f3d52",
+   "cell_type": "markdown",
+   "id": "e06756b6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Aplicaciones a la Ingeniería Civil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "350a4554",
+   "metadata": {},
+   "source": [
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/CivilEng.PNG?raw=true\" width=\"750\" />\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align: center;\">\n",
+    "    <strong>Tomado de:</strong> Fuentes varias de internet. Todas las imagenes tienen libre reproducción.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76c7e832",
+   "metadata": {},
+   "source": [
+    "En el contexto de la [Ingeniería Civil](https://en.wikipedia.org/wiki/Civil_engineering), la *[Geometría Analítica y Vectorial](https://en.wikipedia.org/wiki/Analytic_geometry)* encuentra aplicaciones en numerosos y variados aspectos de la profesión. La comprensión y habilidad para aplicar estos conceptos es esencial para los ingenieros civiles en su vida profesional. A continuación, se detallan algunas de las aplicaciones más relevantes:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1ef40e7",
+   "metadata": {},
+   "source": [
+    "***Diseño Estructural y Arquitectónico:***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb313730",
+   "metadata": {},
+   "source": [
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Loads.PNG?raw=true\" width=\"500\" />\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align: center;\">\n",
+    "    <strong>Tomado de:</strong> Fuentes varias de internet. Todas las imagenes tienen libre reproducción.\n",
+    "</p>\n",
+    "\n",
+    "- La *geometría analítica* es clave en el diseño de estructuras y elementos arquitectónicos, permitiendo calcular dimensiones precisas y ángulos críticos. Esto incluye el diseño de elementos estructurales como vigas, columnas y losas, así como aspectos estéticos y funcionales de edificaciones y otras estructuras."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "219636a4",
+   "metadata": {},
+   "source": [
+    "***Ingeniería de Transporte:***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ede8f860",
+   "metadata": {},
+   "source": [
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Peralte.jpg?raw=true\" width=\"500\" />\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align: center;\">\n",
+    "    <strong>Tomado de:</strong> Fuentes varias de internet. Todas las imagenes tienen libre reproducción.\n",
+    "</p>\n",
+    "\n",
+    "- La geometría vectorial juega un papel crucial en el diseño de infraestructuras de transporte como carreteras, puentes y túneles. El análisis de curvas, pendientes y niveles es fundamental para garantizar la seguridad y eficiencia de estas estructuras."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c22ec47",
+   "metadata": {},
+   "source": [
+    "***Análisis Hidráulico y Gestión de Recursos Hídricos:***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bc93122",
+   "metadata": {},
+   "source": [
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Hydraulic.jpg?raw=true\" width=\"500\" />\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align: center;\">\n",
+    "    <strong>Tomado de:</strong> Fuentes varias de internet. Todas las imagenes tienen libre reproducción.\n",
+    "</p>\n",
+    "\n",
+    "- La modelización y análisis de sistemas hidráulicos, como presas, canales y sistemas de riego, requieren un entendimiento profundo de la geometría y el cálculo vectorial para optimizar el flujo de agua y garantizar la seguridad estructural."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad238897",
+   "metadata": {},
+   "source": [
+    "***Ingeniería Geotécnica y Topografía:***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fda64663",
+   "metadata": {},
+   "source": [
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Geotechnical.webp?raw=true\" width=\"500\" />\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align: center;\">\n",
+    "    <strong>Tomado de:</strong> Fuentes varias de internet. Todas las imagenes tienen libre reproducción.\n",
+    "</p>\n",
+    "\n",
+    "- En la ingeniería geotécnica, la geometría analítica ayuda en el análisis del terreno y en la planificación de cimentaciones, excavaciones y obras subterráneas. La topografía, por su parte, utiliza estos conceptos para la medición y representación del terreno, esencial en la planificación de cualquier proyecto de construcción."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcba1440",
+   "metadata": {},
+   "source": [
+    "***Análisis y Diseño Sísmico:***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f2d992a",
+   "metadata": {},
+   "source": [
+    "|Amenaza Sísmica en Colombia|Cargas Sísmicas|\n",
+    "|:----------------------------:|:-------------:|\n",
+    "|<p float=\"center\"><img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/SeismicColombianMap.gif?raw=true\" width=\"300\" /></p>|<p float=\"center\"><img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Seismic.png?raw=true\" width=\"500\" /></p>|\n",
+    "\n",
+    "<p style=\"text-align: center;\">\n",
+    "    <strong>Tomado de:</strong> Fuentes varias de internet. Todas las imagenes tienen libre reproducción.\n",
+    "</p>\n",
+    "\n",
+    "- En zonas propensas a terremotos, el análisis sísmico es vital. La geometría y el cálculo vectorial permiten entender y simular cómo las fuerzas sísmicas afectan a las estructuras, lo que es crucial para diseñar edificaciones que puedan resistir tales eventos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3537808f",
+   "metadata": {},
+   "source": [
+    "***Otros:***\n",
+    "\n",
+    "- **Innovación y Tecnología en Construcción:*** Con la integración de nuevas tecnologías como la impresión 3D en la construcción, la geometría analítica y vectorial se vuelve esencial para modelar y diseñar componentes estructurales complejos.\n",
+    "\n",
+    "- ***Sostenibilidad y Medio Ambiente:*** La geometría analítica y vectorial también contribuye al diseño ambientalmente sostenible, optimizando el uso de recursos y minimizando el impacto ambiental de los proyectos.\n",
+    "\n",
+    "La Geometría Analítica y Vectorial es una herramienta multifacética en la Ingeniería Civil, crucial para enfrentar los desafíos de diseño, planificación y ejecución de proyectos de infraestructura de manera segura, eficiente y sostenible. Este curso proporcionará a los estudiantes las bases teóricas y prácticas necesarias para aplicar estos conceptos en una amplia gama de situaciones profesionales."
+   ]
   }
  ],
  "metadata": {
