--- a/S04_GeometriaAnaliticaPlana.ipynb
+++ b/S04_GeometriaAnaliticaPlana.ipynb
@@ -82,7 +82,9 @@
     "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/CoordSystem00.png?raw=true\" width=\"500\" />\n",
     "</p>\n",
     "\n",
-    "En este sistema, se elige un punto arbitrario $O$ (el origen ) en una línea dada. La coordenada de un punto $P$ se define como la distancia con signo de $O$ a $P$ , donde la distancia con signo es la distancia tomada como positiva o negativa dependiendo de en qué lado de la línea se encuentre $P$. A cada punto se le asigna una coordenada única y cada número real es la coordenada de un punto único. "
+    "En este sistema, se elige un punto arbitrario $O$ (el origen ) en una línea dada. La coordenada de un punto $P$ se define como la distancia con signo de $O$ a $P$ , donde la distancia con signo es la distancia tomada como positiva o negativa dependiendo de en qué lado de la línea se encuentre $P$. A cada punto se le asigna una coordenada única y cada número real es la coordenada de un punto único. \n",
+    "\n",
+    "La porción de la línea recta comprendida entre dos de sus puntos se le llama *segmento rectilíneo*. Por ejemplo, el segmento entre los puntos $0$ y $1$"
    ]
   },
   {
@@ -176,6 +178,35 @@
     "</p>\n",
     "\n",
     "Esta fórmula es esencial en ingeniería civil para determinar distancias exactas en proyectos de construcción."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d37dc1c",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce8fb2c8",
+   "metadata": {},
+   "source": [
+    "Demostrar que los puntos $P_1(3,3), P_2(-3,-3), P_3(-3 \\sqrt{3}, 3 \\sqrt{3})$ son vértices de un triángulo equilátero.\n",
+    "\n",
+    "- ***Solución:*** Empleando la fórmula de la distancia entre pares de puntos, tenemos:\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\left|\\overline{P_1 P_2}\\right| & =\\sqrt{(3+3)^2+(3+3)^2}=6 \\sqrt{2} \\\\\n",
+    "\\left|\\overline{P_2 P_3}\\right| & =\\sqrt{(-3+3 \\sqrt{3})^2+(-3-3 \\sqrt{3})^2} \\\\\n",
+    "& =\\sqrt{(9-18 \\sqrt{3}+27)+(9+18 \\sqrt{3}+27)} \\\\\n",
+    "& =\\sqrt{36+36}=6 \\sqrt{2} \\\\\n",
+    "\\left|\\overline{P_3 P_1}\\right| & =\\sqrt{(-3 \\sqrt{3}-3)^2+(3 \\sqrt{3}-3)^2}=6 \\sqrt{2}\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Luego el triángulo es equilátero, ya que todos sus lados son de igual longitud."
    ]
   },
   {
@@ -275,6 +306,100 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0acfcc49",
+   "metadata": {},
+   "source": [
+    "### Segmento dirigido"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03d5fcfc",
+   "metadata": {},
+   "source": [
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Line09.PNG?raw=true\" width=\"350\" />\n",
+    "</p>\n",
+    "\n",
+    "A la porción de una línea recta comprendida entre dos de sus puntos se llama segmento rectilíneo o simplemente segmento. Los dos puntos se llaman extremos del segmento y se consideran parte de este.\n",
+    "\n",
+    "Un segmento que se le asigna una direccion se le denomina *segmento dirigido*. Por lo tanto, en un segmento con extremos $A$ y $B$  se pueden especificar dos direcciones asi:\n",
+    "\n",
+    "- El segmento dirigido que va de $A$ a $B$, es decir, el segmento $AB$. Entonces, $A$ es el origen o punto inicial, y $B$ es el extremo o punto final. La longitud del segmento $AB$ se representa como $\\overline{AB}$\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Line07.PNG?raw=true\" width=\"250\" />\n",
+    "</p>\n",
+    "\n",
+    "- El segmento dirigido que va de $B$ a $A$, es decir, el segmento $BA$. Entonces, $B$ es el origen o punto inicial, y $A$ es el extremo o punto final. La longitud del segmento $BA$ se representa como $\\overline{BA}$\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Line08.PNG?raw=true\" width=\"250\" />\n",
+    "</p>\n",
+    "\n",
+    "- ***Nota:*** Como la longitud es una magnitud, no interesa el sentido, entonces: $\\overline{AB}=\\overline{BA}$. Sin embargo, para especificar, de forma arbitraria, que un segmento dirigido en un sentido tiene *longitud \"positiva\"*, mientras que otro segmento con la misma longitud pero dirigido en sentido opuesto tendrá *longitud \"negativa\"* se escribe: $\\overline{AB}=-\\overline{BA}$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea548a9b",
+   "metadata": {},
+   "source": [
+    "#### Ejemplos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45a67412",
+   "metadata": {},
+   "source": [
+    "***Ejemplo 1:*** En un sistema coordenado lineal, $P_1\\left(x_1\\right)$ y $P_2\\left(x_2\\right)$ son los puntos extremos dados de un segmento dirigido. \n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Line10.PNG?raw=true\" width=\"250\" />\n",
+    "</p>\n",
+    "\n",
+    "Demostrar que la coordenada $(x)$ de un punto $P$ que divide a $P_1 P_2$ en la razón dada $r=\\overline{P_1 P}: \\overline{P P_2}$ es\n",
+    "$$\n",
+    "x=\\frac{x_1+r x_2}{1+r}, r \\neq-1\n",
+    "$$\n",
+    "\n",
+    "- ***Solución:***\n",
+    "\n",
+    "Para demostrar esta fórmula, utilizaremos el concepto de la división de un segmento en una razón dada. El punto $ P $ divide al segmento dirigido $ P_1P_2 $ en la razón $ r = \\frac{\\overline{P_1P}}{\\overline{PP_2}} $. Aquí, $ \\overline{P_1P} $ y $ \\overline{PP_2} $ son las longitudes de los segmentos de línea desde $ P_1 $ hasta $ P $, y desde $ P $ hasta $ P_2 $, respectivamente.\n",
+    "\n",
+    "En un sistema de coordenadas lineal, las coordenadas de los puntos están relacionadas con las longitudes de los segmentos de la siguiente manera:\n",
+    "\n",
+    "- La longitud del segmento $ \\overline{P_1P} $ es $ x - x_1 $ (si $ x > x_1 $) o $ x_1 - x $ (si $ x < x_1 $).\n",
+    "- La longitud del segmento $ \\overline{PP_2} $ es $ x_2 - x $ (si $ x_2 > x $) o $ x - x_2 $ (si $ x_2 < x $).\n",
+    "\n",
+    "Dado que estamos trabajando en un sistema lineal, podemos utilizar la fórmula general para la división de un segmento en una razón dada. La fórmula para encontrar el punto $ x $ que divide el segmento $ P_1P_2 $ en la razón $ r $ es:\n",
+    "\n",
+    "$$ x = \\frac{rx_2 + x_1}{1 + r} $$\n",
+    "\n",
+    "Ahora, vamos a demostrar esta fórmula partiendo de la definición de $ r $:\n",
+    "\n",
+    "1. $ r = \\frac{\\overline{P_1P}}{\\overline{PP_2}} $.\n",
+    "\n",
+    "Para un sistema lineal, esto se convierte en:\n",
+    "\n",
+    "$$ r = \\frac{x - x_1}{x_2 - x} $$\n",
+    "\n",
+    "2. Despejamos $ x $ de esta ecuación. Primero, multiplicamos ambos lados de la ecuación por $ (x_2 - x) $ y luego por $ (1 + r) $ para obtener la fórmula.\n",
+    "\n",
+    "Procedamos con los cálculos.\n",
+    "\n",
+    "La ecuación resultante al despejar $ x $ es:\n",
+    "\n",
+    "$$ x = \\frac{r x_2 + x_1}{r + 1} $$\n",
+    "\n",
+    "Esta es precisamente la fórmula que queríamos demostrar. Demuestra que la coordenada $ x $ de un punto $ P $ que divide el segmento $ P_1P_2 $ en una razón $ r $ es $ \\frac{x_1 + r x_2}{1 + r} $, siempre que $ r \\neq -1 $. \n",
+    "\n",
+    "Esta fórmula es útil en geometría analítica para encontrar puntos específicos en un segmento de línea dado, basándose en la razón dada para dividir ese segmento."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d865eaf",
    "metadata": {},
    "source": [
@@ -286,13 +411,33 @@
    "id": "de07646d",
    "metadata": {},
    "source": [
-    "- ***División de un Segmento en una Razón Específica:*** Dado el segmento de recta con extremos en los puntos $ A(-4, 1) $ y $ B(6, 9) $, encuentre las coordenadas del punto $ C $ que divide el segmento $ AB $ en la razón $ 3:2 $.  \n",
+    "- Haciendo $r=1$ en la fórmula obtenida en el ejemplo 1, demostrar que la coordenada del punto medio de un segmento rectilíneo es la media aritmética de las coordenadas de sus puntos extremos.\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "- Hallar los puntos de trisección y el punto medio del segmento dirigido cuyos extremos son los puntos $(-7)$ y $(-19)$.\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "- Un cuadrado, de lado igual a $2 a$, tiene su centro en el origen $y$ sus lados son paralelos a los ejes coordenados, Hallar las coordenadas de sus cuatro vértices.\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "- Los vértices de un triángulo rectángulo son los puntos $(1,-2)$, $(4,-2),(4,2)$. Determinar las longitudes de los catetos. y después calcular el área del triángulo y la longitud de la hipotenusa.\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "- Demostrar que los segmentos que unen los puntos medios de los lados sucesivos del cuadrilátero del ejercicio 1 forman un paralelogramo.\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "- Dado el segmento de recta con extremos en los puntos $ A(-4, 1) $ y $ B(6, 9) $, encuentre las coordenadas del punto $ C $ que divide el segmento $ AB $ en la razón $ 3:2 $.  \n",
     "<p>&nbsp;</p>\n",
     "\n",
     "- ***Aplicación Práctica en Ingeniería Civil:*** Considere un segmento de recta que representa un tramo de carretera. Los extremos de este tramo son los puntos $P(2, -3)$ y $Q(10, 5)$. Se planea construir un punto de parada en este tramo de manera que divida al segmento $ PQ $ en una razón de $1:4$. Determine las coordenadas del punto donde se deberá construir el punto de parada.  \n",
     "<p>&nbsp;</p>\n",
     "\n",
-    "- ***División de un Segmento en una Razón Negativa:*** Los puntos $ M(3, 7) $ y $ N(-5, -1) $ son los extremos de un segmento de recta. Encuentre las coordenadas del punto $ R $ que divide el segmento $ MN $ en la razón $ -1:3 $. (***Nota:*** Una razón negativa implica que el punto de división se encuentra en la extensión del segmento fuera de $ MN $.)"
+    "- ***División de un Segmento en una Razón Negativa:*** Los puntos $ M(3, 7) $ y $ N(-5, -1) $ son los extremos de un segmento de recta. Encuentre las coordenadas del punto $ R $ que divide el segmento $ MN $ en la razón $ -1:3 $. (***Nota:*** Una razón negativa implica que el punto de división se encuentra en la extensión del segmento fuera de $ MN $.)\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "- Los vértices de un triángulo son $(2,-1),(-4,7),(8,0)$. Hallar, para cada una de las medianas, el punto de trisección más cercano al punto medio del lado correspondiente. Demostrar que este punto es el mismo para cada una de las medianas $y$, por tanto, que las medianas concurren en un punto. Este punto se llama baricentro del triángulo.\n",
+    "<p>&nbsp;</p>\n",
+    "\n"
    ]
   },
   {
@@ -1228,7 +1373,7 @@
     "f. $m=-\\frac{2}{5}, A(1,4)$  \n",
     "g. $m=\\frac{3}{4}, A(2.5,-3)$  \n",
     "h. $A(4,17), B(-2 / 3,4 / 2)$  \n",
-    "i. $\\quad D(-1.5,4.1), F(2,3)$  \n",
+    "i. $D(-1.5,4.1), F(2,3)$  \n",
     "j. $G(9,-9), H(0,0)$  "
    ]
   },
