--- a/S04_GeometriaAnaliticaPlana.ipynb
+++ b/S04_GeometriaAnaliticaPlana.ipynb
@@ -1310,7 +1310,18 @@
    "source": [
     "Dos rectas pueden tener un punto en común o pueden no tenerlo. Cuando las rectas no tienen ese punto en común, es porque las rectas son paralelas, es decir, poseen la misma pendiente.\n",
     "\n",
-    "Por otro lado, si las rectas tienen punto en común, ese punto es el punto de intersección, y para encontrarlo se suele resolver un sistema de ecuaciones lineales."
+    "Por otro lado, si las rectas tienen punto en común, ese punto es el punto de intersección, y para encontrarlo se suele resolver un sistema de ecuaciones lineales.\n",
+    "\n",
+    "Para:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "& l_1: A_1 x+B_1 y+C_1=0 \\\\\n",
+    "& l_2: A_2 x+B_2 y+C_2=0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "La familia de rectas que pasa por el punto de intersección de $l_1$ y $l_2$ se puede expresar como:\n",
+    "\n",
+    "$$\\left(A_1 x+B_1 y+C_1\\right)+k\\left(A_2 x+B_2 y+C_2\\right)=0$$"
    ]
   },
   {
@@ -1340,6 +1351,132 @@
     "<p>&nbsp;</p>\n",
     "\n",
     "5. $\\left\\{\\begin{array}{c}9 x+16 y=7 \\\\ 4 y-3 x=0\\end{array}\\right.$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17758a1e",
+   "metadata": {},
+   "source": [
+    "### Forma normal de la ecuación de la recta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d53a543",
+   "metadata": {},
+   "source": [
+    "La forma normal de la línea recta es\n",
+    "\n",
+    "$$l: x \\cos \\omega+y \\sin \\omega-P=0$$\n",
+    "\n",
+    "En donde $P$ es un número positivo, numéricamente igual a la longitud normal trazada desde el origen hasta la recta y $\\boldsymbol{\\omega}$ es el ángulo positivo medido desde el eje $x$ hasta la normal $P$.\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Line11.PNG?raw=true\" width=\"250\" />\n",
+    "</p>\n",
+    "\n",
+    "\n",
+    "***Ejemplo:*** Demuestre la ecuación de la forma normal de la ecuación de la recta\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Line12.PNG?raw=true\" width=\"250\" />\n",
+    "</p>\n",
+    "\n",
+    "Considerando el punto que intercepta la normal con la línea recta.\n",
+    "\n",
+    "Tenemos:\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& x_1=P \\cos \\omega \\\\\n",
+    "& y_1=P \\sin \\omega\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "En este caso tenemos que la pendiente de la línea normal $\\boldsymbol{l}$ es $m_P=$ $\\tan \\omega$. Debido a que $\\boldsymbol{P}$ y $\\boldsymbol{l}$ son perpendiculares:\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& m_l \\cdot m_P=-1 \\\\\n",
+    "& m_l \\cdot \\tan \\omega=-1 \\\\\n",
+    "& m_l \\cdot \\frac{\\sin \\omega}{\\cos \\omega}=-1 \\\\\n",
+    "& m_l=-\\frac{\\cos \\omega}{\\sin \\omega}\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Sabiendo que para un segmento cualquiera la pendiente de la recta es conocida, entonces para un segmento $\\overline{P P_1}$ la pendiente es\n",
+    "Tenemos:\n",
+    "$$\n",
+    "m=\\frac{y-y_1}{x-x_1}=\\frac{y-P \\sin \\omega}{x-P \\cos \\omega}\n",
+    "$$\n",
+    "\n",
+    "Sustituimos $m$ en $m_l$\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& \\frac{y-P \\sin \\omega}{x-P \\cos \\omega}=-\\frac{\\cos \\omega}{\\sin \\omega} \\\\\n",
+    "& (y-P \\sin \\omega) \\sin \\omega=-\\cos \\omega(x-P \\cos \\omega) \\\\\n",
+    "& y \\sin \\omega-P \\sin ^2 \\omega=-x \\cos \\omega+P \\cos ^2 \\omega \\\\\n",
+    "& x \\cos \\omega+y \\sin \\omega-P\\left(\\sin ^2 \\omega+\\cos ^2 \\omega\\right)=0 \\\\\n",
+    "& x \\cos \\omega+y \\sin \\omega-P=0\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec571076",
+   "metadata": {},
+   "source": [
+    "### Distancia de una línea recta a un punto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69e3ea3c",
+   "metadata": {},
+   "source": [
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Line13.PNG?raw=true\" width=\"250\" />\n",
+    "</p>\n",
+    "\n",
+    "Para conocer la distancia $d$ de una recta $A x+B y+C=0$ aun punto dado $P_1\\left(x_1, y_1\\right)$ podemos usar la siguiente expresión:\n",
+    "\n",
+    "$$\n",
+    "d=\\frac{\\left|A x_1+B y_1+C\\right|}{\\sqrt{A^2+B^2}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67eb2c09",
+   "metadata": {},
+   "source": [
+    "#### Ejercicios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b2aa656",
+   "metadata": {},
+   "source": [
+    "- Encontrar la distancia entre las líneas rectas:\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& l_1: 2 x+3 y-4=0 \\\\\n",
+    "& l_2: 6 x+9 y+11=0\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "- Encontrar el lugar geométrico de todos los puntos $P(x, y)$ paralelos a la recta $12 x-5 y-15=0$ y cuya distancia es $d=4$.\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "- Determine una expresión para calcular la distancia de una línea recta al origen.\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "- Determine el valor de $k$ para que la distancia del origen a la recta $x+k y-7=0$ sea $2$.\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "- Encontrar la ecuación de la línea recta que se encuentra a $5$ unidades del origen. Y cuya línea perpendicular forma un ángulo de $2 \\pi / 3$ con respecto al eje $x$."
    ]
   },
   {
